# voxterra

./: .gitignore  CMakeLists.txt  README.md
src/: block.cpp  block.hpp  camera.cpp  camera.hpp  game_window.cpp  game_window.hpp  main.cpp  player.cpp  player.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  vertexAttribBuilder.hpp  voxconfig.h.in  window.cpp  window.hpp  world.cpp  world.hpp
